[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/BreakoutBall.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://Sounds/impact_deep_thud_bounce_10.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/retro_ui_menu_blip_click_01.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/retro_ui_menu_blip_click_18.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[node name="Ball" type="RigidBody2D"]
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_velocity = Vector2( 200, -200 )
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="PaddleHitNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BrickHitNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DataHitNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
